# ARM-Emulator-Assembler-and-Arcade

./: CMakeLists.txt
doc/: c_project_checkpoint.tex  c_project_final.tex
game/: README.txt  block.c  block.h  collision.c  collision.h  game  game.c  game.h  goomba.c  goomba.h  input.c  input.h  item.c  item.h  linkedlist.c  linkedlist.h  main.c  main_tmp.c  mario.c  mario.h  projectile.c  projectile.h  todo.txt
game/data/: level0.csv  level0.json  level1.csv  levels.h
programs/: gpio.s  kernel.img
src/: assemble.c  assemble.h  emulate.c
src/assemble_utils/: binary_utils.c  binary_utils.h  binary_utils_test.c  encode_branch.c  encode_branch.h  encode_dp.c  encode_dp.h  encode_mult.c  encode_mult.h  encode_sdt.c  encode_sdt.h  encode_special.c  encode_special.h  hash_table.c  hash_table.h  hash_table_test.c  parse_utils.c  parse_utils.h  parse_utils_test.c  string_utils.c  string_utils.h  string_utils_test.c
src/emulate_utils/: decode.c  decode.h  execute_branch.c  execute_branch.h  execute_dp.c  execute_dp.h  execute_mult.c  execute_mult.h  execute_sdt.c  execute_sdt.h  helpers.c  helpers.h  instruction.h  machine.h
